[fix] 테스트 버그 수정, 사원 BaseEntity 상속